--- a/src/main/resources/templates/Formulario.html
+++ b/src/main/resources/templates/Formulario.html
@@ -43,7 +43,7 @@
 <body>
     <h1 style="text-align: center">Formulario</h1>
     <div class="conteiner">
-        <form>
+        <form method="POST" action="novo_aluno">
             <div>
                 Nome: 
                 <span class="mg_erro mg_nome">Campo Obrigatorio</span>
