--- a/src/main/resources/templates/Formulario.html
+++ b/src/main/resources/templates/Formulario.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+        <html xmlns:th="http://www.thymeleaf.org"
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        layout:decorate="layout">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,25 +47,26 @@
     <h1 style="text-align: center">Formulario</h1>
     <div class="conteiner">
         <form method="POST" action="novo_aluno">
+           
             <div>
                 Nome: 
                 <span class="mg_erro mg_nome">Campo Obrigatorio</span>
                 <span class="mg_erro mg_nomeInvalido">Campo invalido</span><br>
-                <input type="text" id="nome" name="namo"/>
+                <input th:value="${aluno.nome}" type="text" id="nome" name="nome"/>
             </div>
             
             <div>
                 Email: 
                 <span class="mg_erro mg_email">Campo Obrigatorio</span>
                 <span class="mg_erro mg_emailInvalido">Campo invalido</span><br>
-                <input type="email" id="email" name="email"/>
+                <input th:value="${aluno.email}" type="email" id="email" name="email"/>
             </div>
             
             <div>
                 Cpf: 
                 <span class="mg_erro mg_cpf">Campo Obrigatorio</span>
                 <span class="mg_erro mg_cpfInvalido">Campo invalido</span><br>
-                <input type="text" id="cpf" name="cpf"/>
+                <input th:value="${aluno.cpf}" type="text" id="cpf" name="cpf"/>
             </div>
             
             <label>Sexo: </label>
@@ -76,26 +80,25 @@
             </div>
     
             <label>Módulo</label>
-    
+
             <div>
-                <input type="radio" id="PrimeiroModulo" name="Modulo" checked/>
-                <label>Primeiro Modulo<br></label>
-                <input type="radio" id="SegundoModulo" name="Modulo"/>
-                <label>Segundo Modulo<br></label>
-                <input type="radio" id="TerceiroModulo" name="Modulo"/>
-                <label>Terceiro Modulo<br></label>
+                <select id="modulo" name="modulo">
+                    <option th:selected="${aluno.modulo=='Primeiro'}">Primeiro</option>
+                    <option th:selected="${aluno.modulo=='Segundo'}">Segundo</option>
+                    <option th:selected="${aluno.modulo=='Primeiro'}">Terceiro</option>
+                </select>
             </div>
     
             <label>Áreas preferidas</label> 
             <span class="mg_erro mg_checkBox">Campo Obrigatorio</span>
     
-            <div>
-                <input type="checkbox" id="Programacao" name="checkbox">
-                <label>Programação<br></label>
-                <input type="checkbox" id="Redes" name="checkbox">
-                <label>Redes de computadores<br></label>
-                <input type="checkbox" id="Manutencao" name="checkbox">
-                <label>Manutenção de computadores<br></label>
+            <div class="form-group">
+                <label for="sltAreas">Áreas</label>
+                <select multiple class="form-control" id="sltAreas" name="areas">
+                    <option th:selected="${aluno.areas != null ? #arrays.contains(aluno.areas, 'Montagem e Manutenção') : false}">Montagem e Manutenção</option>
+                    <option th:selected="${aluno.areas != null ? #arrays.contains(aluno.areas, 'Programação') : false}">Programação</option>
+                    <option th:selected="${aluno.areas != null ? #arrays.contains(aluno.areas, 'Redes de Computadores') : false}">Redes de Computadores</option>                
+                </select>
             </div>
             <div>
                 <div>
@@ -103,7 +106,7 @@
                     <span class="mg_erro mg_senha">Campo Obrigatorio</span>
                     <span class="mg_erro mg_senhasDiferentes">senhas direferentes</span>
                     <span class="mg_erro mg_senhaInvalido">Campo invalido</span><br>
-                    <input type="password" id="Senha" name="senha"><br>
+                    <input th:value="${aluno.senha}" th:readonly="${aluno.senha}" type="password" id="Senha" name="senha"><br>
                 </div>
                 <div>
                     <label>Confirmaçao: </label>
@@ -113,11 +116,12 @@
                 </div>
             </div>
             <div>
-                <input type="button" class="botaoEnviar" onclick="validar()" id="enviar" name="enviar" value="enviar">
+                <input type="submit" class="botaoEnviar" onclick="return validar()" id="enviar" name="enviar" value="enviar">
                 <input type="reset" class="botaoReset" id="reset" name="reset" value="reset">
                 
             </div>
         </form>
+        
     </div>
 </body>
 <script>
@@ -131,13 +135,13 @@ function validar(){
     if(nome.value==""){
         spanNome.style.display = "inline-block";
         spanNomeInvalido.style.display = "none";
-        return;
+        return false;
     }
     else{
         spanNome.style.display = "none";
         if(nome.value.length < 4){
             spanNomeInvalido.style.display = "inline-block";
-            return;
+            return false;
         }
         else{
             spanNomeInvalido.style.display = "none";
@@ -151,13 +155,13 @@ function validar(){
     if(email.value==""){
         spanEmail.style.display = "inline-block";
         spanEmailInvalidado.style.display = "none";
-        return;
+        return false;
     }
     else{
         spanEmail.style.display="none";
         if(email.value.indexOf("@") == -1 || email.value.indexOf(".") == -1){
             spanEmailInvalidado.style.display = "inline-block";
-            return;
+            return false;
         }
         else{
             spanEmailInvalidado.style.display = "none";
@@ -170,19 +174,19 @@ function validar(){
     if(cpf.value==""){
         spanCpf.style.display = "inline-block";
         spanCpfInvalido.style.display = "none";
-        return;
+        return false;
     }
     else{
         spanCpf.style.display = "none";
         if(cpf.value.length < 11){
             spanCpfInvalido.style.display = "inline-block";
-            return;
+            return false;
         }
         else{
             spanCpfInvalido.style.display = "none";
         }
     }
-
+    /*
     var checkbox = document.getElementsByName("checkbox");
     var spanCheckbox = document.querySelector(".mg_checkBox");
     var checkboxMarcados = 0;
@@ -193,12 +197,12 @@ function validar(){
     }
     if(checkboxMarcados == 0){
         spanCheckbox.style.display = "inline-block";
-        return;
+        return false;
     }
     else{
         spanCheckbox.style.display = "none";
     }
-
+    */
     var senha = document.getElementById("Senha");
     var spanSenha = document.querySelector(".mg_senha");
     var spanSenhaInvalido = document.querySelector(".mg_senhaInvalido");
@@ -213,26 +217,26 @@ function validar(){
     if(senha.value==""){
         spanSenha.style.display = "inline-block";
         spanSenhaInvalido.style.display = "none";
-        return;
+        return false;
     }
     else{
         spanSenha.style.display = "none";
         if(senha.value.length < 6){
             spanSenhaInvalido.style.display = "inline-block";
-            return;
+            return false;
         }
         else{
             spanSenhaInvalido.style.display = "none";
             if(confirmacao.value == ""){
                 spanConfirmacao.style.display="inline-block";
                 spanConfirmacaoInvalido.style.display="none";
-                return;
+                return false;
             }
             else{
                 spanConfirmacao.style.display = "none";
                 if(confirmacao.value.length < 6){
                     spanConfirmacaoInvalido.style.display="inline-block";
-                    return;
+                    return false;
                 }
                 else{
                     spanConfirmacaoInvalido.style.display="none";
@@ -242,16 +246,15 @@ function validar(){
                     }
                     else{
                         spanSenhasDiferentes.style.display = "inline-block"
-                        return;
+                        return false;
                     }
                 }
             }
         }
     }
-    alert("Cadastro Concluido");
+    return true;
 }
 
-
-
 </script>
+ <p th:text="${mensagem}" style="text-align: center; font-size: 30px;"></p>
 </html>
