--- a/src/main/resources/templates/Formulario.html
+++ b/src/main/resources/templates/Formulario.html
@@ -33,7 +33,8 @@
             border-radius: 10px 10xp 10xp 10px;
         }
         body{
-            background-color: rgb(226, 138, 226);
+             background-color: aliceblue;
+             
         }
         .conteiner{
             padding: 5%;
@@ -41,12 +42,14 @@
             width: 35%;
             left: 40%;
         }
+       
     </style>
 </head>
 <body>
     <h1 style="text-align: center">Formulario</h1>
     <div class="conteiner">
-        <form method="POST" action="novo_aluno">
+        <form method="POST" action="/novo_aluno">
+            <input type="number" th:value="${aluno.id}" name="id" style="display: none">
            
             <div>
                 Nome: 
@@ -93,7 +96,6 @@
             <span class="mg_erro mg_checkBox">Campo Obrigatorio</span>
     
             <div class="form-group">
-                <label for="sltAreas">Áreas</label>
                 <select multiple class="form-control" id="sltAreas" name="areas">
                     <option th:selected="${aluno.areas != null ? #arrays.contains(aluno.areas, 'Montagem e Manutenção') : false}">Montagem e Manutenção</option>
                     <option th:selected="${aluno.areas != null ? #arrays.contains(aluno.areas, 'Programação') : false}">Programação</option>
